--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>quasar-maven-archetype</groupId>
-  <artifactId>quasar-maven-archetype</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <name>Archetype - quasar-maven-archetype</name>
+  <groupId>co.paralleluniverse</groupId>
+  <artifactId>quasar-mvn-archetype</artifactId>
+  <version>0.1.0</version>
+  <name>Archetype - quasar-mvn-archetype</name>
   <url>http://maven.apache.org</url>
 </project>
