--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -181,7 +181,7 @@
             -->
 
             <!-- Turn off before production -->
-            <!-- argument>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argument -->
+            <argument>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argument>
 
             <!-- Enable if using compile-time (AoT) instrumentation -->
 #if ($instrumentationMethod == "aot")
@@ -195,19 +195,19 @@
             <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar}</argument-->
 
             <!-- Quasar Agent for JDK 8 -->
-            <argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar:jdk8}</argument>
+            <argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar:jdk8}</argument> <!-- Add "=b" to force instrumenting blocking calls like Thread.sleep() -->
 #elseif ($instrumentationMethod != "aot")
             <!-- Quasar Agent for JDK 7 -->
-            <argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar}</argument>
+            <argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar}</argument> <!-- Add "=b" to force instrumenting blocking calls like Thread.sleep() -->
 
             <!-- Quasar Agent for JDK 8 -->
             <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar:jdk8}</argument -->
 #else
             <!-- Quasar Agent for JDK 7 -->
-            <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar}</argument -->
+            <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar}</argument --> <!-- Add "=b" to force instrumenting blocking calls like Thread.sleep() -->
 
             <!-- Quasar Agent for JDK 8 -->
-            <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar:jdk8}</argument -->
+            <!-- argument>-javaagent:${dollar}{co.paralleluniverse:quasar-core:jar:jdk8}</argument --> <!-- Add "=b" to force instrumenting blocking calls like Thread.sleep() -->
 #end
 
             <!-- Classpath -->
@@ -234,7 +234,7 @@
           -->
 
           <!-- Turn off before production -->
-          <!-- argLine>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argLine-->
+          <argLine>-Dco.paralleluniverse.fibers.verifyInstrumentation=true</argLine>
 
           <!-- Enable if using compile-time (AoT) instrumentation -->
 #if ($instrumentationMethod == "aot")
